Fix the registration views for users.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
 <h1>Users#new</h1>
+<li>
+	<%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+	<%= link_to('Update', edit_user_registration_path) %>
+</li>
+
 <p>Find me in app/views/users/new.html.erb</p>
 
 
