--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -10,6 +10,12 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
+  <div><%= f.label :first_name %><br/>
+    <%= f.text_field :first_name %></div>
+
+  <div><%= f.label :last_name %><br/>
+    <%= f.text_field :last_name %></div>
+
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
