--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,21 +6,11 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
-  <div>
-    <!-- This part of the form is for the Person model which means that this is a person not an admin or business -->
-    <%= fields_for :person do |p| %>
-        <div>
-          <%= p.label :first_name, "First Name" %><br />
-          <%= p.text_field :first_name %>
-        </div>
+  <div><%= f.label :first_name %><br/>
+    <%= f.text_field :first_name %></div>
 
-        <div>
-          <%= p.label :last_name, "Last Name" %><br />
-          <%= p.text_field :last_name %>
-        </div>
-        <!-- Need to add fields for birthday? Do they need to be a certain age? -->
-    <% end %>
-  </div>
+  <div><%= f.label :last_name %><br/>
+    <%= f.text_field :last_name %></div>
 
   <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
