--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,15 @@
     
 </head>
 <body id="body">
+    <div id="site-wrapper">
     <div id="app_top_nav_wrapper">
         <div id="logo_top">
-            <%= image_tag "mark-web-transparent.png" %>
-    </div>
+            <a href="/"><%= image_tag "mark-web-transparent.png" %></a>
+        </div>
         <div id="app_top_nav"> 
             <div id="log_top"></div>
             <ul>
-                <li>Contact Us</li>
+                <li><a href="/">Contact Us</a></li>
             </ul>
         
         </div>
@@ -24,6 +25,6 @@
     </div>
 
 <%= yield %>
-
+    </div>
 </body>
 </html>
