--- a/app/assets/stylesheets/application-body.css.scss
+++ b/app/assets/stylesheets/application-body.css.scss
@@ -1,3 +1,52 @@
-#asdfasd {
-   
+#body {
+    margin: 0px;
+    width: auto;
+    height: auto;
+    background-color: #fff; 
+    font-family: 'Comfortaa', cursive;
+    color: #fff;
+}
+    a:link, 
+    a:visited, 
+    a:hover, 
+    a:active {
+    text-decoration: none; 
+    color: inherit;
+    
+}
+
+a:hover {
+        color: #ffb100;   
+    }
+
+#site-wrapper {
+    margin:inherit;
+    width: inherit;
+    height: inherit;
+    background-image: url("<%=  app/assets/images/ 'background-image.jpeg' %>")
+}
+
+#app_top_nav_wrapper {
+    width: inherit;
+    height: 50px;
+    background-color: #333;
+}
+
+#logo_top img{
+    background-color: transparent;
+    width: 45px;
+    height: 45px;
+    float: left;
+}
+
+#app_top_nav {
+    float: right;
+    height: inherit;
+    width: auto;
+    font-size: 13px;
+    margin-right: 10px;
+    margin-top: 2px;
+    ul {
+       list-style-type: none;
+    }
 }
