--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,10 +4,10 @@
 #login_wrapper {
     width: 400px;
     background-color: #00ddff;
-    margin: auto;
+    margin-left: calc(50% - 200px);
     margin-top: 200px;
     border-radius: 25px;
-    position: relative;
+    
     
     h2{
         margin-left: calc(50% - 1.5em);
@@ -16,10 +16,14 @@
     #login-email, 
     #login-password, 
     #login-remember {
-        margin-left: 29%;
+        margin-left: calc(50% - 86.5px);
         
         label {
             margin-left: 5px;
+            
+            input {
+                border-radius: 5px;
+            }
         }
         
     }
