--- a/app/assets/stylesheets/application-body.css.scss
+++ b/app/assets/stylesheets/application-body.css.scss
@@ -6,10 +6,10 @@
     font-family: 'Comfortaa', cursive;
     color: #fff;
 }
-    a:link, 
-    a:visited, 
-    a:hover, 
-    a:active {
+a:link, 
+a:visited, 
+a:hover, 
+a:active {
     text-decoration: none; 
     color: inherit;
     
@@ -24,7 +24,12 @@ a:hover {
 //    margin:;
     width: 100%;
     height: 100%;
-    background-image: image-url('background-image1.jpeg');
+    background-image: image-url('background.jpg');
+    
+    img {
+        width: inherit;
+            
+    }
     
     
     
