--- a/app/assets/stylesheets/application-body.css.scss
+++ b/app/assets/stylesheets/application-body.css.scss
@@ -16,7 +16,8 @@ a:active {
 }
 
 a:hover {
-        color: #ffb100;   
+        color: #ffb100; 
+        
     }
 
 #site-wrapper {
@@ -24,8 +25,9 @@ a:hover {
 //    margin:;
     width: 100%;
     height: 100%;
-    background-image: image-url('background.jpg');
-    
+    background-image: image-url('background-color.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
     img {
         width: inherit;
             
@@ -39,7 +41,9 @@ a:hover {
 #app_top_nav_wrapper {
     width: 100%;
     height: 50px;
+    //background
     background-color: #333;
+    box-shadow: 0px 1px 2px #222;
 }
 
 #logo_top img{
@@ -58,7 +62,7 @@ a:hover {
     width: auto;
     font-size: 13px;
     margin-right: 10px;
-    margin-top: 2px;
+    margin-top: 5px;
     ul {
        list-style-type: none;
     }
