--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -3,11 +3,11 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-<div id="sign-up"><br /><%= link_to "Sign up", new_registration_path(resource_name) %></div><br />
+<br /><div id="sign-up"><div class="button-sign-up"><%= link_to "Sign up", new_registration_path(resource_name) %></div></div><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-<div id="forgot-password"><%= link_to "Forgot your password?", new_password_path(resource_name) %></div><br />
+<div id="forgot-password"><div class="button-sign-up"><%= link_to "Forgot your password?", new_password_path(resource_name) %></div></div><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
