--- a/app/assets/stylesheets/application-body.css.scss
+++ b/app/assets/stylesheets/application-body.css.scss
@@ -25,8 +25,8 @@ a:hover {
 //    margin:;
     width: 100%;
     height: 100%;
-    background-image: image-url('background-color.jpg');
-    background-size: 100%;
+    background-image: image-url('powerscourt.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     img {
         width: inherit;
