--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,24 +1,26 @@
-<h2>Sign up</h2>
+<div id="Sign-up-wrapper" class="login_wrapper"> 
+<h2>Sign Up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div class="text-input"><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :first_name %><br/>
+  <div class="text-input"><%= f.label :first_name %><br/>
     <%= f.text_field :first_name %></div>
 
-  <div><%= f.label :last_name %><br/>
+  <div class="text-input"><%= f.label :last_name %><br/>
     <%= f.text_field :last_name %></div>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+  <div class="text-input"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div class="text-input"><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="submit"><%= f.submit "Sign up" %></div>
 <% end %>
-
+<br />
 <%= render "devise/shared/links" %>
+</div>
