You can log out on each of the dashboard pages.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
     height: auto;
     background-color: #fff; 
     font-family: 'Comfortaa', cursive;
-    color: #fff;
+    color: #000;
     
 }
 
