--- a/app/views/dashboards/admin_page.html.erb
+++ b/app/views/dashboards/admin_page.html.erb
@@ -1,1 +1,3 @@
 <h1>This is the admin page.</h1>
+<%= link_to('Logout', destroy_admin_session_path, method: :delete) %>
+<%= link_to('Update', edit_admin_registration_path) %>
