--- a/app/views/dashboards/brand_page.html.erb
+++ b/app/views/dashboards/brand_page.html.erb
@@ -1,1 +1,3 @@
 <h1>This is the brand page.</h1>
+<%= link_to('Logout', destroy_brand_session_path, method: :delete) %>
+<%= link_to('Update', edit_brand_registration_path) %>
