--- a/app/views/dashboards/user_page.html.erb
+++ b/app/views/dashboards/user_page.html.erb
@@ -1,1 +1,3 @@
 <h1>This is the user page.</h1>
+<%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+<%= link_to('Update', edit_user_registration_path) %>
